Openapi with streams (#6)
* wip

* Bidirectional streams

* Using AsyncTimerSequence

* Some kind of reconnection
