# Sources/API/openapi.yaml
@@ -67,6 +67,36 @@ paths:
                 type: array
                 items:
                   $ref: '#/components/schemas/RoomResponse'
+  /chat:
+    post:
+      operationId: getMessages
+      summary: Subscribe to chat updates
+      parameters:
+        - in: header
+          name: user_id
+          schema:
+            type: string
+            format: uuid
+          required: true
+        - in: header
+          name: room_id
+          schema:
+            type: string
+            format: uuid
+          required: true
+      requestBody:
+        required: true
+        content:
+          application/jsonl:
+            schema:
+              $ref: '#/components/schemas/ChatMessage'
+      responses:
+        '200':
+          description: A stream of chat updates
+          content:
+            application/jsonl:
+              schema:
+                $ref: '#/components/schemas/ChatMessage'
 components:
   schemas:
     UserResponse:
@@ -94,3 +124,68 @@ components:
         description:
           type: string
           nullable: true
+    ChatMessage:
+      type: object
+      properties:
+        user:
+          $ref: '#/components/schemas/UserResponse'
+        room:
+          $ref: '#/components/schemas/RoomResponse'
+        message:
+          oneOf:
+            - $ref: '#/components/schemas/JoinMessage'
+            - $ref: '#/components/schemas/TextMessage'
+            - $ref: '#/components/schemas/LeaveMessage'
+            - $ref: '#/components/schemas/DisconnectMessage'
+            - $ref: '#/components/schemas/HeartbeatMessage'
+      required:
+        - user
+        - room
+        - message
+    JoinMessage:
+      type: object
+      properties:
+        type:
+          type: string
+          enum: [join]
+      required:
+        - type
+    TextMessage:
+      type: object
+      properties:
+        type:
+          type: string
+          enum: [message]
+        content:
+          type: string
+        timestamp:
+          type: string
+          format: date-time
+      required:
+        - type
+        - content
+        - timestamp
+    LeaveMessage:
+      type: object
+      properties:
+        type:
+          type: string
+          enum: [leave]
+      required:
+        - type
+    DisconnectMessage:
+      type: object
+      properties:
+        type:
+          type: string
+          enum: [disconnect]
+      required:
+        - type
+    HeartbeatMessage:
+      type: object
+      properties:
+        type:
+          type: string
+          enum: [heartbeat]
+      required:
+        - type
